--- a/web-testing/report.html
+++ b/web-testing/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,9092],[],[[5,0,6,[7,8],[1,351,8738],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,18540],[],[[5,0,6,[7,8],[1,334,9985],[]],[9,0,10,[11,12],[1,10320,8219],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon Tests","*C:\\Users\\mateu.gobo\\git\\udemy\\robot-framework\\web-testing\\amazon_tests.robot","*amazon_tests.robot","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Este teste verifica o menu eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon Tests","*C:\\Users\\mateu.gobo\\git\\udemy\\robot-framework\\web-testing\\amazon_tests.robot","*amazon_tests.robot","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Este teste verifica o menu eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Caso de teste 02 - Pesquisa de um Produto","*<p>Este teste verifica a busca de um produto\x3c/p>","*busca_produtos","*resultado"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":0,"label":"categorias","pass":1,"skip":0},{"elapsed":"00:00:09","fail":0,"label":"menus","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Amazon Tests","name":"Amazon Tests","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:08","fail":0,"label":"busca_produtos","pass":1,"skip":0},{"elapsed":"00:00:10","fail":0,"label":"categorias","pass":1,"skip":0},{"elapsed":"00:00:10","fail":0,"label":"menus","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"label":"resultado","pass":1,"skip":0}],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"Amazon Tests","name":"Amazon Tests","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1746190918702;
+window.output["baseMillis"] = 1746450338091;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 9097;
+window.output["generated"] = 18544;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
